A8_External_Access/code/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-hello-cisco
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /hello-cisco(/|$)(.*)
        backend:
          serviceName: svc-hello-cisco
          servicePort: 5000
---
apiVersion: v1
kind: Service
metadata:
    name: svc-hello-cisco
    labels:
        app: hello-cisco
spec:
    type: NodePort
    ports:
    - port: 5000
      nodePort: 30001
      protocol: TCP
    selector:
        app: hello-cisco
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: deploy-hello-cisco
spec:
    replicas: 4
    selector:
        matchLabels:
            app: hello-cisco
    minReadySeconds: 10
    strategy:
        type: RollingUpdate
        rollingUpdate:
            maxUnavailable: 1
            maxSurge: 1
    template:
        metadata:
            labels:
                app: hello-cisco
        spec:
            containers:
            - name: hello-cisco
              image: mimaurer/hello-cisco:v1
              ports:
              - containerPort: 5000
